# django-app-rag

./: .gitignore  ID_STRATEGY_CHANGES.md  README.md  README_QUESTIONS.md  analyze_msgpack_storage.py  find_duplicates.py  install_dependencies.sh  pyproject.toml  requirements.txt  setup.py
django_app_rag/: app_settings.py  apps.py  forms.py  install_hooks.py  logging.py  models.py  pytest.ini  serializer.py  test_settings.py  urls.py  views.py
django_app_rag/migrations/: 0001_initial.py  0002_rename_documents_document_rename_questions_question.py  0003_rename_field_source_link.py  0004_source_file_source_notion_db_ids_alter_source_link.py  0005_collection_delete_document_source_collection.py  0006_remove_answer_source_answer_question.py  0007_ragconfig.py  0008_document_answer_documents.py  0009_alter_answer_question_alter_document_uid.py  0010_source_is_indexed_at.py  0011_source_quality_score.py
django_app_rag/rag/: README_COLLECT_PIPELINES.md  crawler.py  dataset.py  logging_setup.py  models.py  retrievers.py  run.py  settings.py  splitters.py  test.py  tests.py  thread_safe_logger.py  utils.py
django_app_rag/tasks/: __init__.py  etl_tasks.py  handler.py  mixins.py  rag_tasks.py
doc/: CHANGES_SUMMARY.md  README_SOURCE_INDEXING_FINAL.md
static/: package-lock.json  package.json  vite.config.js  vue-i18n-extract.config.js
static/frontend/: App.vue  CollectionTable.vue  Document.vue  DocumentTable.vue  MIGRATION_SUMMARY.md  POLLING_PERSISTENCE.md  POLLING_TEST_GUIDE.md  QuestionForm.vue  QuestionList.vue  SourceDetail.vue  SourceForm.vue  main.js  style.css
(+96 files in other folders)
