[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-rag-app"
version = "0.1.0"
description = "A Django application for Retrieval-Augmented Generation (RAG) functionality"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Wonters", email = "shift.python.software@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/Wonters/django-app-rag"
Documentation = "https://github.com/Wonters/django-app-rag#readme"
Repository = "https://github.com/Wonters/django-app-rag.git"
"Bug Tracker" = "https://github.com/Wonters/django-app-rag/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.hatch.build.targets.wheel]
packages = ["django_app_rag"]

[tool.setuptools.packages.find]
where = ["."]
include = ["django_app_rag"]
exclude = ["tests*", "migrations*"]
